# thetatwist

./: .gitattributes  .gitignore  CITATION.cff  EVALUATION_CAMPAIGN.md  LICENSE  PROOF.md  README.md  REFERENCES.md  pyproject.toml  requirements-section12.txt
experiments/: __init__.py
results/: d3_certificate.json  manifest.json  section12_all_generators.manifest  section12_inputs.manifest
tests/: __init__.py  test_core.py  test_section12_cm_bridge_global_hs_chart_resolution.py  test_section12_cm_bridge_hs_all_chart_presentations.py  test_section12_cm_bridge_hs_border_to_local_frames.py  test_section12_cm_bridge_hs_chart_local_syzygy_audit.py  test_section12_cm_bridge_hs_extension_from_surface_presentation.py  test_section12_cm_bridge_hs_graph_koszul_j1_overlap_lifts.py  test_section12_cm_bridge_hs_lambda_overlap_transport.py  test_section12_cm_bridge_hs_rank2_k_chain_comparison.py  test_section12_cm_bridge_hs_rank2_k_coherence_adapter.py  test_section12_cm_bridge_hs_rank2_k_generator_metadata_repair.py  test_section12_cm_bridge_hs_rank2_k_generator_overlap_j1.py  test_section12_cm_bridge_hs_rank2_k_generator_residue_transport.py  test_section12_cm_bridge_hs_rank2_k_generator_shamash.py  test_section12_cm_bridge_hs_rank2_k_generator_tree_contraction.py  test_section12_cm_bridge_hs_rank2_k_generator_tree_contraction_driver.py  test_section12_cm_bridge_hs_shamash_overlap_lifts.py  test_section12_cm_bridge_iw_hermite_border_basis.py  test_section12_cm_bridge_iw_presentation_solver.py  test_section12_cm_bridge_iw_surface_ring_presentation.py  test_section12_evaluation.py  (+2 more)
(+56 files in other folders)
