[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thetatwist"
version = "0.1.0"
description = "Exact theta-twist calculation for a genus-four secant construction"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Brian Ross"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.scripts]
thetatwist = "thetatwist.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
